# oversight

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  LICENSE  Pipfile  README.md  pyproject.toml  server.py  setup.cfg
ansible/: ansible.cfg  site.yml
ansible/roles/common/tasks/: main.yml  rbpi.yml
ansible/roles/nginx/files/: nginx.conf
ansible/roles/nginx/tasks/: main.yml
ansible/roles/nginx/templates/: nginx.conf
ansible/roles/oversight/files/: oversight.conf  server.py  settings.py.j2
ansible/roles/oversight/tasks/: main.yml
ansible/roles/oversight/templates/: settings.py.j2
ansible/roles/supervisor/tasks/: main.yml
example/: settings.py
oversight/: __main__.py  admin.py  apps.py  forms.py  models.py  root_urls.py  settings.py  urls.py  views.py  wsgi.py
oversight/management/commands/: checksensors.py  sensordaemon.py  server.py
oversight/migrations/: 0001_initial.py  0001_initial_squashed.py  0001_logentry_sensor.py  0002_auto_20140131_1403.py  0003_sensor_log_plot.py  0004_add_dbindex_to_logentry_datetime.py  0005_use_index_together.py  0006_add_logging_field.py  0007_add_alaram_fields.py
oversight/sensors/: base.py  eurotherm.py  pressure.py  testing.py  web.py
oversight/static/oversight/css/: oversight.css
oversight/static/oversight/js/: oversight.js
oversight/templates/oversight/: compare.html  detail.html  index.html  page.html
oversight/templatetags/: ktoc.py
systemd/: oversight-logger.service  oversight-web.service
