[project]
name = "oversight"
version = "0.1.0"
description = ""
authors = [
    {name = "Florian Apolloner", email = "florian@apolloner.eu"},
]
dependencies = [
    "Django>=4.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
